--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>kevinjlope</title></head><body> <noscript>You need to enable Javascript to run this application.</noscript> <div id="app">  </div> <script type="module" src="https://kevinjlope.github.io/index.8647401a.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>kevinjlope</title>
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
+
+  </head>
+  <body>
+    <noscript>You need to enable Javascript to run this application.</noscript>
+    <div id="app">
+      <!-- Your react app will be rendered here -->
+    </div>
+    <script src="/index.975ef6c8.js" defer=""></script>
+  </body>
+</html>
